# veloce

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md
.cargo/: config.toml
examples/mk5/: Cargo.toml
examples/mk5/src/: main.rs
examples/obu/: Cargo.toml
examples/obu/src/: main.rs  main_raw.rs  nmea_checksum.py  road.nmea
examples/pki_client/: Cargo.toml
examples/pki_client/src/: main.rs
veloce/: Cargo.toml  build.rs
veloce-asn1/: Cargo.toml  build.rs
veloce-asn1/asn/: CAM-PDU-Descriptions.asn  DENM-PDU-Descriptions.asn
veloce-asn1/asn/messages/etsi_102894-2_v2.2.1/: ETSI-ITS-CDD.asn
veloce-asn1/asn/messages/etsi_103831_v2.2.1/: DENM-PDU-Descriptions.asn
veloce-asn1/asn/security/etsi_102941_v2.2.1/: EtsiTs102941BaseTypes.asn  EtsiTs102941MessagesCa.asn  EtsiTs102941MessagesItss-OptionalPrivacy.asn  EtsiTs102941MessagesItss.asn  EtsiTs102941TrustLists.asn  EtsiTs102941TypesAuthorization.asn  EtsiTs102941TypesAuthorizationValidation.asn  EtsiTs102941TypesCaManagement.asn  EtsiTs102941TypesEnrolment.asn  EtsiTs102941TypesLinkCertificate.asn  Ieee1609Dot2.asn  Ieee1609Dot2BaseTypes.asn  Ieee1609Dot2Dot1AcaEeInterface.asn  Ieee1609Dot2Dot1AcaLaInterface.asn  Ieee1609Dot2Dot1AcaMaInterface.asn  Ieee1609Dot2Dot1AcaRaInterface.asn  Ieee1609Dot2Dot1Acpc.asn  Ieee1609Dot2Dot1CamRaInterface.asn  Ieee1609Dot2Dot1CertManagement.asn  Ieee1609Dot2Dot1EcaEeInterface.asn  Ieee1609Dot2Dot1EeMaInterface.asn  Ieee1609Dot2Dot1EeRaInterface.asn  Ieee1609Dot2Dot1LaMaInterface.asn  Ieee1609Dot2Dot1LaRaInterface.asn  Ieee1609Dot2Dot1MaRaInterface.asn  Ieee1609Dot2Dot1Protocol.asn
veloce-asn1/asn/security/etsi_103097_v2.1.1/: EtsiTs103097ExtensionModule.asn  EtsiTs103097Module.asn  Ieee1609Dot2.asn  Ieee1609Dot2BaseTypes.asn
veloce-asn1/asn/security/ieee1609_2023/: EtsiTs103097ExtensionModule.asn  EtsiTs103097Module.asn  Ieee1609Dot2.asn  Ieee1609Dot2BaseTypes.asn  Ieee1609Dot2Crl.asn  Ieee1609Dot2CrlBaseTypes.asn  Ieee1609Dot2CrlSsp.asn  Ieee1609Dot2Dot1AcaEeInterface.asn  Ieee1609Dot2Dot1AcaLaInterface.asn  Ieee1609Dot2Dot1AcaMaInterface.asn  Ieee1609Dot2Dot1AcaRaInterface.asn  Ieee1609Dot2Dot1Acpc.asn  Ieee1609Dot2Dot1CamRaInterface.asn  Ieee1609Dot2Dot1CertManagement.asn  Ieee1609Dot2Dot1EcaEeInterface.asn  Ieee1609Dot2Dot1EeMaInterface.asn  Ieee1609Dot2Dot1EeRaInterface.asn  Ieee1609Dot2Dot1LaMaInterface.asn  Ieee1609Dot2Dot1LaRaInterface.asn  Ieee1609Dot2Dot1MaRaInterface.asn  Ieee1609Dot2Dot1Protocol.asn  Ieee1609Dot2Peer2Peer.asn
veloce-asn1/examples/: certviewer.rs  decenc.rs
veloce-asn1/examples/assets/: AA.cert  AT.cert  EA.cert  eu_ectl_226BCD8A97B96630  eu_ectl_6F1895D16BA90EAE  eu_ectl_E3B49921E05A5953  vw_ectl_C8EAAB4C86EBCDD2  vw_tlm_C8EAAB4C86EBCDD2
veloce-asn1/src/: etsi_102941_v221.rs  etsi_103097_v211.rs  etsi_messages_r2.rs  lib.rs
veloce-ctl/: Cargo.toml
veloce-ctl/src/: commands.rs  main.rs
veloce-gnss/: Cargo.toml
veloce-gnss/examples/: gpsd.rs  replay.rs
veloce-gnss/examples/assets/: road.nmea
veloce-gnss/src/: fixed.rs  gpsd.rs  lib.rs  replay.rs
veloce-ipc/: Cargo.toml  build.rs  event.proto
veloce-ipc/examples/: pub.rs  sub.rs
veloce-ipc/schema/: denm.proto  event.proto  message.proto
veloce-ipc/src/: event.rs  lib.rs  zmq.rs
veloce-ipc/src/proto/: mod.rs
veloce-nxp-phy/: Cargo.toml  build.rs
veloce-nxp-phy/examples/: llc_device.rs  nxp_device.rs  usb_device.rs
veloce-nxp-phy/src/: config.rs  lib.rs  llc.rs  phy.rs  usb.rs  usb2.rs  usb_phy.rs  usb_phy2.rs
veloce-nxp-phy/src/wire/: mod.rs  radio_config.rs
veloce-nxp-phy/sys/: llc-api.h  llc.h  wrapper.h
veloce-nxp-phy/sys/r16/: llc-api.h  llc.h
veloce-nxp-phy/sys/r17.1/: wrapper.h
veloce/examples/: etsi_conformance.rs  mix.rs  nxp_device.rs
veloce/src/: config.rs  lib.rs  macros.rs  tests.rs  time.rs  types.rs
veloce/src/common/: cbf_buffer.rs  geo_area.rs  mod.rs  packet_buffer.rs  poti.rs  wgs.rs
veloce/src/conformance/: etsi.rs  mod.rs
veloce/src/iface/: interface_set.rs  location_service.rs  location_table.rs  mod.rs  packet.rs  poti.rs  socket_set.rs  v2x_packet.rs
veloce/src/iface/congestion/: limeric.rs  mod.rs  no_control.rs
veloce/src/iface/dcc/: limeric.rs  mod.rs
veloce/src/iface/interface/: btp.rs  congestion.rs  dcc.rs  ethernet.rs  geonet.rs  ieee80211p.rs  mod.rs
veloce/src/ipc/: denm.rs  mod.rs
veloce/src/network/: core.rs  mod.rs  request.rs
veloce/src/phy/: mod.rs  nxp.rs  raw_socket.rs  tracer.rs  tuntap_interface.rs  udp.rs
veloce/src/phy/sys/: bpf.rs  linux.rs  mod.rs  raw_socket.rs
veloce/src/pki/: asn1_wrapper.rs  encrypted_data.rs  mod.rs  signed_data.rs
veloce/src/pki/message/: authorization.rs  crl.rs  ctl.rs  enrollment.rs  mod.rs
veloce/src/pki/service/: mod.rs
veloce/src/security/: aid.rs  backend.rs  certificate_cache.rs  ciphertext.rs  mod.rs  permission.rs  secured_message.rs  signature.rs  storage.rs  trust_chain.rs  trust_store.rs
veloce/src/security/backend/: openssl.rs
veloce/src/security/certificate/: at.rs  ec.rs  mod.rs  root.rs  subordinate.rs  tlm.rs
veloce/src/security/pki/: asn1_wrapper.rs  encrypted_data.rs  mod.rs  signed_data.rs
veloce/src/security/privacy/: c2c.rs  mod.rs  no.rs  threshold.rs
veloce/src/security/service/: cert_request.rs  decap.rs  encap.rs  mod.rs  sign.rs  verify.rs
veloce/src/security/ssp/: cam.rs  crl.rs  ctl.rs  denm.rs  mod.rs  scr.rs
veloce/src/security/storage/: directory.rs
veloce/src/security/tests/: backend.rs  certificate.rs  mod.rs  secured_message.rs
veloce/src/socket/: cam.rs  denm.rs  geonet.rs  mod.rs  waker.rs
veloce/src/socket/btp/: mod.rs  type_a.rs  type_b.rs
veloce/src/storage/: mod.rs  packet_buffer.rs
veloce/src/wire/: ethernet.rs  etsi_its.rs  ieee80211.rs  llc.rs  mod.rs  pretty_print.rs
veloce/src/wire/btp/: mod.rs  type_a.rs  type_b.rs
veloce/src/wire/geonet/: anycast_broadcast_header.rs  basic_header.rs  beacon_header.rs  common_header.rs  geonet.rs  location_service_req_header.rs  long_position_vector.rs  mod.rs  packet.rs  short_position_vector.rs  single_hop_header.rs  topo_header.rs  unicast_header.rs
(+179 files in other folders)
