[package]
name = "veloce-asn1"
version = "0.1.0"
authors = ["Thibaud Rouillé <thibaud.rouille@gmail.com>"]
edition = "2021"
description = "Veloce ASN1 formats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
rasn = "0.12"
lazy_static = "1.4.0" # This should not be a dependency.

[build-dependencies]
rasn-compiler = { git = "https://github.com/librasn/compiler" }
