[package]
name = "veloce-asn1"
version = "0.1.0"
authors = ["Thibaud Rouillé <veloce@ferroxyde.com>"]
edition = "2021"
description = "Veloce ASN1 formats"

[lib]
doctest = false

[dependencies]
rasn = "0.15"
lazy_static = "1.5"          # This should not be a dependency.

[build-dependencies]
rasn-compiler = { git = "https://github.com/librasn/compiler" }

[[example]]
name = "decenc"
