[package]
name = "veloce-asn1"
version = "0.1.0"
authors = ["Veloce developers <veloce@ferroxyde.com>"]
edition = "2021"
description = "Veloce ASN1 formats"
license = "GPL-3.0-only OR LicenseRef-Veloce-Software-1.0"

[lib]
doctest = false

[dependencies]
rasn = "0.20.1"
lazy_static = "1.5"         # Rasn compiler dependency. This should not be a dependency.
num-traits = { version = "0.2.19", default-features = false } # Rasn dependency. This should not be a dependency.

[build-dependencies]
rasn-compiler = "0.5.3"

[features]
default = ["etsi-messages-r2", "etsi-pki-r2"]

"etsi-messages-r2" = ["etsi-cam-r2", "etsi-denm-r2"]

"etsi-cdd-r2" = []
"etsi-cam-r2" = ["etsi-cdd-r2"]
"etsi-denm-r2" = ["etsi-cdd-r2"]
"etsi-security-r2" = []
"etsi-pki-r2" = ["etsi-security-r2"]

"ieee1609dot2-2023-wip-do-not-use" = []

[[example]]
name = "decenc"
