[package]
name = "veloce-gnss"
version = "0.1.0"
authors = ["Veloce developers <veloce@ferroxyde.com>"]
edition = "2021"
description = "Veloce GNSS position provider"
license = "GPL-3.0-only OR LicenseRef-Veloce-Software-1.0"

[dependencies]
veloce = { path = "../veloce" }
uom = { version = "0.36", default-features = false, features = [
   "autoconvert",
   "f64",
   "si",
] }
mio = { version = "1.0", features = ["os-poll", "net"], optional = true }
gpsd_proto = { git = "https://github.com/c-to-the-l/gpsd_proto.git", branch = "support_gpsd_325", optional = true }
serde_json = { version = "1.0", optional = true }
nmea = { git = "https://github.com/AeroRust/nmea.git", default-features = false, optional = true, features = [
   "all-sentences",
] }
ublox = { version = "0.4", default-features = false, optional = true }
chrono = { version = "0.4", default-features = false, optional = true, features = [
   "alloc",
] }
log = { version = "0.4", optional = true }
libc = { version = "0.2", optional = true }

[features]
std = [
   "dep:mio",
   "chrono?/std",
   "chrono?/clock",
   "chrono?/now",
   "uom/std",
   "nmea?/std",
   "ublox?/std",
]
gpsd = [
   "std",
   "dep:gpsd_proto",
   "dep:libc",
   "dep:serde_json",
   "dep:chrono",
   "dep:log",
]
nmea = ["dep:nmea", "dep:chrono"]
ubx = ["dep:ublox"]
replay = ["std", "nmea"]

default = ["gpsd", "replay"]

[[example]]
name = "gpsd"

[[example]]
name = "replay"
