[package]
name = "veloce-ipc"
version = "0.1.0"
authors = ["Veloce developers <veloce@ferroxyde.com>"]
edition = "2021"
description = "Veloce IPC for messaging between apps."
license = "GPL-3.0-only OR LicenseRef-Veloce-Software-1.0"

[dependencies]
prost = "0.13"
zmq = "0.10"

[build-dependencies]
prost-build = "0.13"
