[package]
name = "veloce-nxp-phy"
version = "0.1.0"
authors = ["Thibaud Rouillé <veloce@ferroxyde.com>"]
edition = "2021"
description = "Veloce NXP SAF5x00 PHY"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.4" }
futures-lite = "2.2.0"
nusb = "0.1.6"
rusb = "0.9.3"
veloce = { path = "../veloce" }

[dev-dependencies]
clap = { version = "4.4.11", features = ["derive"] }
log = { version = "0.4.20", default-features = false }
uom = { version = "0.34.0", features = ["autoconvert", "f32"] }
thread-priority = "0.15.1"

[build-dependencies]
bindgen = "0.69.2"

[[example]]
name = "usb_device"

[[example]]
name = "llc_device"
