[package]
name = "veloce-nxp-phy"
version = "0.1.0"
authors = ["Veloce developers <veloce@ferroxyde.com>"]
edition = "2021"
description = "Veloce NXP SAF5x00 PHY"
license = "GPL-3.0-only OR LicenseRef-Veloce-Software-1.0"


[dependencies]
rusb = "0.9"
veloce = { path = "../veloce", features = ["packetmeta-power", "medium-ieee80211p"] }
heapless = { git = "https://github.com/rust-embedded/heapless.git", branch = "main" }
log = { version = "0.4", default-features = false }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
uom = { version = "0.34.0", features = ["autoconvert", "f64"] }

[build-dependencies]
bindgen = "0.69"

[features]
llc-r17_1 = []
llc-r16 = []

default = ["llc-r17_1"]

[[example]]
name = "usb_device"

[[example]]
name = "llc_device"
