[package]
name = "veloce"
version = "0.1.0"
authors = ["Thibaud Rouillé <veloce@ferroxyde.com>"]
edition = "2021"
description = "A V2x stack for embedded devices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
defmt = { version = "0.3.5", optional = true }
env_logger = "0.10"
heapless = { git = "https://github.com/kurkpitaine/heapless.git", branch = "linked_list" }
libc = { version = "0.2", optional = true }
log = { version = "0.4.20", default-features = false, optional = true }
managed = { version = "0.8", default-features = false, features = ["map"] }
uom = { version = "0.35", features = ["autoconvert", "f32"] }
veloce-asn1 = { path = "../veloce-asn1", optional = true }

[dev-dependencies]
approx = "0.5.1"
mac_address = "1.1.5"
clap = { version = "4.4.11", features = ["derive"] }

[features]
std = ["managed/std", "alloc"]
alloc = ["managed/alloc", "defmt?/alloc"]
defmt = ["dep:defmt", "heapless/defmt-03"]
asn1 = ["dep:veloce-asn1"]
conformance = []

"medium-ethernet" = []
"medium-ieee80211p" = []
"medium-pc5" = []

"phy-raw_socket" = ["std", "libc"]
"phy-tuntap_interface" = ["std", "libc", "medium-ethernet"]

"proto-geonet" = []
"proto-btp" = ["proto-geonet"]
"proto-map" = ["proto-geonet", "proto-btp"]
"proto-cam" = ["proto-geonet", "proto-btp"]
"proto-denm" = ["proto-geonet", "proto-btp"]
"proto-spat" = ["proto-geonet", "proto-btp"]
"proto-ivi" = ["proto-geonet", "proto-btp"]

"socket" = []
"socket-geonet" = ["socket", "proto-geonet"]
"socket-btp-a" = ["socket", "proto-geonet"]
"socket-btp-b" = ["socket", "proto-geonet"]

"socket-cam" = ["alloc", "socket", "proto-cam", "asn1"]
"socket-denm" = ["alloc", "socket", "proto-denm", "asn1"]

"packetmeta-id" = []
"packetmeta-power" = []

"async" = []

default = [
   "std",
   "log",
   "asn1",
   "medium-ethernet",
   "medium-ieee80211p",
   "medium-pc5",
   "phy-raw_socket",
   "proto-geonet",
   "proto-btp",
   "socket",
   "socket-geonet",
   "socket-btp-a",
   "socket-btp-b",
   "socket-cam",
   "socket-denm",
   "packetmeta-id",
   "packetmeta-power",
   "async",
   "conformance",
]

[[example]]
name = "etsi_conformance"
required-features = [
   "std",
   "log",
   "medium-ethernet",
   "phy-raw_socket",
   "proto-geonet",
   "proto-btp",
   "socket-geonet",
   "socket-btp-a",
   "socket-btp-b",
   "conformance",
]

[profile.release]
debug = 2
