[package]
name = "veloce"
version = "0.1.0"
authors = ["Thibaud Rouillé <veloce@ferroxyde.com>"]
edition = "2021"
description = "A V2x stack for embedded devices"

[dependencies]
byteorder = "1.5"
defmt = { version = "0.3", optional = true, features = ["alloc"] }
env_logger = "0.11"
heapless = { git = "https://github.com/rust-embedded/heapless.git", branch = "main" }
libc = { version = "0.2", optional = true }
log = { version = "0.4", default-features = false, optional = true }
managed = { version = "0.8", default-features = false, features = ["alloc"] }
uom = { version = "0.36", features = ["autoconvert", "f64"] }
veloce-asn1 = { path = "../veloce-asn1", optional = true }
veloce-ipc = { path = "../veloce-ipc", optional = true }
openssl = { version = "0.10", optional = true, features = ["vendored"] }
openssl-sys = { version = "0.9", optional = true, features = ["vendored"] }
secrecy = { version = "0.8.0", optional = true, features = ["alloc"] }

[dev-dependencies]
approx = "0.5"
mac_address = "1.1"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.10"

[features]
std = ["managed/std"]
defmt = ["dep:defmt", "heapless/defmt-03"]
asn1 = ["dep:veloce-asn1"]
ipc = ["dep:veloce-ipc"]
conformance = []

"medium-ethernet" = []
"medium-ieee80211p" = []
"medium-pc5" = []

"phy-raw_socket" = ["std", "dep:libc"]
"phy-tuntap_interface" = ["std", "dep:libc", "medium-ethernet"]

"proto-geonet" = []
"proto-security" = ["proto-geonet", "asn1"]
"proto-btp" = ["proto-geonet"]
"proto-map" = ["proto-geonet", "proto-btp"]
"proto-cam" = ["proto-geonet", "proto-btp"]
"proto-denm" = ["proto-geonet", "proto-btp"]
"proto-spat" = ["proto-geonet", "proto-btp"]
"proto-ivi" = ["proto-geonet", "proto-btp"]

"socket" = []
"socket-geonet" = ["socket", "proto-geonet"]
"socket-btp-a" = ["socket", "proto-geonet"]
"socket-btp-b" = ["socket", "proto-geonet"]

"socket-cam" = ["socket", "proto-cam", "asn1"]
"socket-denm" = ["socket", "proto-denm", "asn1"]

"packetmeta-id" = []
"packetmeta-power" = []

"security-openssl" = ["std", "dep:openssl", "dep:openssl-sys", "dep:secrecy"]

"async" = []

default = [
   "std",
   "log",
   "asn1",
   "ipc",
   "medium-ethernet",
   "medium-ieee80211p",
   "medium-pc5",
   "phy-raw_socket",
   "proto-geonet",
   "proto-security",
   "proto-btp",
   "socket",
   "socket-geonet",
   "socket-btp-a",
   "socket-btp-b",
   "socket-cam",
   "socket-denm",
   "packetmeta-id",
   "packetmeta-power",
   "security-openssl",
   "async",
   "conformance",
]

[[example]]
name = "etsi_conformance"
required-features = [
   "std",
   "log",
   "medium-ethernet",
   "phy-raw_socket",
   "proto-geonet",
   "proto-btp",
   "socket-geonet",
   "socket-btp-a",
   "socket-btp-b",
   "conformance",
]

[profile.release]
debug = 2
