[package]
name = "veloce-mk5-demo"
version = "0.1.0"
authors = ["Thibaud Rouillé <veloce@ferroxyde.com>"]
edition = "2021"
description = "Veloce MK5 OBU demo"

[dependencies]
veloce = { path = "../../veloce" }
veloce-asn1 = { path = "../../veloce-asn1" }
veloce-ipc = { path = "../../veloce-ipc" }
veloce-gnss = { path = "../../veloce-gnss" }
veloce-nxp-phy = { path = "../../veloce-nxp-phy", default-features = false, features = [
   "llc-r16",
] }
mio = { version = "1.0", features = ["os-ext", "os-poll", "net"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"

[workspace]
